--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,107 +1,254 @@
-:root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, "Cascadia Mono", "Segoe UI Mono",
-    "Roboto Mono", "Oxygen Mono", "Ubuntu Monospace", "Source Code Pro",
-    "Fira Mono", "Droid Sans Mono", "Courier New", monospace;
-
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
-
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
-
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+/* prettier-ignore */
+article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+  line-height: 1;
+}
+ol,
+ul {
+  list-style: none;
+}
+blockquote,
+q {
+  quotes: none;
+}
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: "";
+  content: none;
+}
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+:root {
+  --black: hsl(0, 0%, 0%);
+  --grey: hsl(0, 0%, 19%);
+  --white: hsl(0, 0%, 100%);
+}
 
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
+body {
+  font-size: 16px;
+  /* min-height: 100vh; */
+  
+}
 
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
+.daytime {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.527), rgba(0, 0, 0, 0.5)),
+    url("/assets/mobile/bg-image-daytime.jpg");
 
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
+  @media (min-width: 768px) {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.527), rgba(0, 0, 0, 0.5)),
+      url("/assets/tablet/bg-image-daytime.jpg");
+  }
+  @media (min-width: 1024px) {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.527), rgba(0, 0, 0, 0.5)),
+      url("/assets/desktop/bg-image-daytime.jpg");
   }
 }
 
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
+.nighttime {
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    url("/assets/mobile/bg-image-nighttime.jpg");
+
+  @media (min-width: 768px) {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+      url("/assets/tablet/bg-image-nighttime.jpg");
+  }
+  @media (min-width: 1024px) {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+      url("/assets/desktop/bg-image-nighttime.jpg");
+  }
 }
 
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
+h1 {
+  font-weight: 700;
+  font-size: 6.25rem;
+  line-height: 100px;
+  letter-spacing: -2.5px;
+  color: var(--white);
+  @media (min-width: 768px) {
+    font-size: 10.9375rem;
+    line-height: 175px;
+    letter-spacing: -4.375px;
+  }
+  @media (min-width: 1024px) {
+    font-size: 12.5rem;
+    line-height: 200px;
+    letter-spacing: -5px;
+  }
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+h2 {
+  font-weight: 700;
+  font-size: 1.25rem;
+  line-height: 24px;
+  /* color: var(--grey); */
+  @media (min-width: 768px) {
+    font-size: 2.5rem;
+    line-height: 48px;
+  }
+  @media (min-width: 1024px) {
+    font-size: 3.5rem;
+    line-height: 68px;
+  }
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+h3 {
+  font-size: 0.9375rem;
+  font-weight: 700;
+  line-height: 28px;
+  letter-spacing: 3px;
+  text-transform: uppercase;
+  color: var(--white);
+  @media (min-width: 768px) {
+    font-size: 1.125rem;
+    line-height: 28px;
+    letter-spacing: 3.6px;
+  }
+  @media (min-width: 1024px) {
+    font-size: 1.5rem;
+    line-height: 28px;
+    letter-spacing: 4.8px;
+  }
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
+h4 {
+  font-size: 0.9375rem;
+  font-weight: 400;
+  line-height: 25px;
+  letter-spacing: 3px;
+  text-transform: uppercase;
+  color: var(--white);
+  @media (min-width: 768px) {
+    font-size: 1.125rem;
+    line-height: 28px;
+    letter-spacing: 3.6px;
+  }
+  @media (min-width: 1024px) {
+    font-size: 1.25rem;
+    line-height: 28px;
+    letter-spacing: 4px;
+  }
+}
+
+h5 {
+  font-size: 0.75rem;
+  line-height: 22px;
+  color: var(--white);
+  @media (min-width: 768px) {
+    font-size: 1.125rem;
+    line-height: 28px;
+  }
+}
+
+h6 {
+  font-size: 0.625rem;
+  font-weight: 400;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  /* color: var(--white); */
+  @media (min-width: 768px) {
+    font-size: 0.8125rem;
+    letter-spacing: 2.6px;
+  }
+  @media (min-width: 1024px) {
+    font-size: 0.9375rem;
+    letter-spacing: 3px;
   }
 }
